Update README with additional results information
Added information about manually checked results.

--- a/Mapping/JobRunRecording/README
+++ b/Mapping/JobRunRecording/README
@@ -1,2 +1,4 @@
 I submitted those scripts as jobs based on slurm system on the VUB HPC.
 The recorded outputs from slurm system are stored here. 
+
+Also added some manually checked results such as QC_RAW_ZLESS. 
